fix clipPath state

--- a/src/content/features/YTDLiveChat/styles/YTDLiveChatIframe/iframe.scss
+++ b/src/content/features/YTDLiveChat/styles/YTDLiveChatIframe/iframe.scss
@@ -5,7 +5,15 @@ html {
 }
 
 body.custom-yt-app-live-chat-extension {
-  &.always-on-display {
+  #contents > #separator {
+    opacity: 1;
+  }
+
+  #panel-pages.yt-live-chat-renderer {
+    border-top: 1px solid var(--yt-live-chat-panel-pages-border-color);
+  }
+
+  &.clip-path-enable {
     #contents > #separator {
       opacity: 0;
       transition: opacity 200ms ease;
@@ -14,16 +22,6 @@ body.custom-yt-app-live-chat-extension {
     #panel-pages.yt-live-chat-renderer {
       border-top: 1px solid transparent;
       transition: border-top 200ms ease;
-    }
-
-    &.display {
-      #contents > #separator {
-        opacity: 1;
-      }
-
-      #panel-pages.yt-live-chat-renderer {
-        border-top: 1px solid var(--yt-live-chat-panel-pages-border-color);
-      }
     }
   }
 
